# TypedBot

./: .coveragerc  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
noteBot/: __init__.py  bezierPath.py  canvas.py  colors.py  customTypes.py  drawingTools.py  formattedString.py  images.py  shapes.py  structures.py  text.py
tests/: hello.py  runTests.py  test_comparisons.py  test_imageOutputComparisons.py  test_pages.py
tests/dB_scripts/: booleanOperations.py  booleanOperations2.py  centeredTransform.py  centeredTransformBezierPath.py  cmykFill.py  cmykLinearGradient.py  cmykRadialGradient.py  fill.py  fontAttributes.py  fontPath.py  image.py  image2.py  image3.py  image4.py  imagePixelColor.py  line.py  linearGradient.py  oval.py  path.py  pathWithCounter.py  polygon.py  radialGradient.py  rect.py  removeOverlap.py  save.py  save1.py  savedState.py  savedState1.py  shapes.py  text.py  traceback.py
tests/nB_scripts/: booleanOperations.py  booleanOperations2.py  centeredTransform.py  centeredTransformBezierPath.py  cmykFill.py  cmykLinearGradient.py  cmykRadialGradient.py  fill.py  fontAttributes.py  fontPath.py  fontVariations.py  fontVariations2.py  image.py  image2.py  image3.py  image4.py  imageHTTP.py  imagePixelColor.py  line.py  linearGradient.py  openTypeFeatures.py  openTypeFeatures2.py  openTypeFeatures_kern.py  oval.py  path.py  pathWithCounter.py  polygon.py  radialGradient.py  rect.py  removeOverlap.py  save.py  save1.py  savedState.py  (+5 more)
typedBot/: __init__.py  canvas.py  colors.py  images.py  shapes.py  structures.py  text.py
(+37 files in other folders)
